after content added alignment fixing

--- a/css/home-about.css
+++ b/css/home-about.css
@@ -5,6 +5,10 @@
 .about-box .right-abt{
     position: relative;
 }
+.highlight{
+    height: 100%;
+    overflow: hidden;
+}
 .counter{
     height: 150px;
     width: 150px;
